<resources>
    <string name="app_name">Suitcase</string>
    <string name="suitcase">SuitCase</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="first_name">Firstname</string>
    <string name="last_name">Lastname</string>
    <string name="contact">contact</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="no_account">Don’t have an account?</string>
    <string name="have_account">Already have an account?</string>
    <string name="swipe_left">Swipe Left</string>
    <string name="swipe_right">Swipe Right</string>
    <string name="applicationSlogan">Plan and Pack: Your Ultimate Holiday Checklist App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="purchased">Purchased</string>
    <string name="logout">Logout</string>
    <string name="item_name">Item Name</string>
    <string name="upload_image">Upload Image</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="add">Add</string>
    <string name="update_image">Update Image</string>
    <string name="update">Update</string>
    <string name="share">Share</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="loading">Loading…</string>
</resources>