<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment"
    android:background="@color/primaryColor">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/smallApplicationLogo"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/application_logo_small"
            android:layout_marginTop="80dp"/>

        <TextView
            android:id="@+id/loginText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/smallApplicationLogo"
            android:text="@string/login"
            android:textSize="60sp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:fontFamily="@font/rochester_regular"/>

        <!-- Email editTextField -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/loginEmailTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_marginStart="80dp"
            android:layout_below="@id/loginText"
            app:startIconDrawable="@drawable/ic_email"
            app:startIconTint="@color/start_icon_selector"
            android:textColorHint="#99FFFFFF"
            app:hintTextColor="@color/white"
            app:boxStrokeColor="@color/persian_pink"
            app:boxStrokeWidth="2dp"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loginEmailTextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:textSize="12sp"
                android:fontFamily="@font/roboto_medium"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Password editTextField -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/loginPasswordTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="80dp"
            android:layout_below="@id/loginEmailTextInputLayout"
            app:startIconDrawable="@drawable/ic_lock"
            app:startIconTint="@color/start_icon_selector"
            android:textColorHint="#99FFFFFF"
            app:hintTextColor="@color/white"
            app:boxStrokeColor="@color/persian_pink"
            app:boxStrokeWidth="2dp"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/start_icon_selector">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loginPasswordTextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:textSize="12sp"
                android:fontFamily="@font/roboto_medium"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Forgot password text -->
        <TextView
            android:id="@+id/forgotPasswordText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/loginPasswordTextInputLayout"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/forgot_password"
            android:textColor="#99FFFFFF"
            android:textSize="12sp"
            android:textAlignment="textEnd"
            android:layout_marginTop="7dp"
            android:layout_marginStart="80dp"/>

        <!-- Login button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginButton"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/forgotPasswordText"
            android:layout_marginTop="25dp"
            android:text="@string/login"
            android:fontFamily="@font/roboto_black"
            android:textSize="12sp"
            android:layout_centerHorizontal="true"
            app:strokeColor="@color/white"
            app:strokeWidth="4dp"
            app:cornerRadius="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            app:backgroundTint="@color/primaryColor"
            android:textColor="@color/white"/>

        <LinearLayout
            android:layout_below="@id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="60dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_account"
                android:textColor="#99FFFFFF"
                android:textSize="12sp"
                android:fontFamily="@font/roboto_medium"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/swipe_left"
                android:textColor="@color/columbia_blue"
                android:layout_marginStart="5dp"
                android:textSize="12sp"
                android:fontFamily="@font/roboto_bold"/>

        </LinearLayout>

    </RelativeLayout>

</ScrollView>